host/crates/tui/tests/snapshots/snapshots__graph_zoomed_out.snap
---
source: crates/tui/tests/snapshots.rs
expression: "frame(40.0, MEDIUM, \"--\")"
---
 traffic-police  Pixel 8 [demo]  com.example.shop  pid 4312  ● LIVE  ✎ 1 rule active         60 requests · 5.0 MB in · 40 KB out · 2 failed
╭─ Network · all app traffic ────────────────────────────────────────────────────────────────── ━ Receiving 3.5 KB/s   ━ Sending 1.8 KB/s ─╮
│ 1.0 MB/s                                                                                       ┊             ▃▃▂▃▃▂                      │
│                                                                                                ┊             ██████                      │
│ 512 KB/s                                                                                       ┊            ▃██████▄                     │
│                                                                                                ▁▁▁▁▁▁▁▁▁▁▁▁▁████████▅▄▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁ │
│        0 ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┊┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┊┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ │
│                                                                                                🮃██🮄█🮄█🮅███🮅🮆▀█🮄🮅██████🮆🮅🮄🮂🮅🮅🮅🮄🮅█🮄🮅██🮄█🮄🮃 │
│ 4.0 KB/s                                                                                       ┊▔▔ ▀ 🮂 █ ▀   🮃  ┊  ██🮆            🮃▔ 🮃   │
│                                                                                                ┊       █        ┊  🮃█                    │
│ 8.0 KB/s                                                                                       ┊       🮂        ┊   ▔                    │
│                                                                                                00:00.000                       00:30.000 │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Requests 60 ─ Connection ─ Thread ─ Rules ──────────────────────────────────────────────────────────────────────────────────────────────╮
│ Name                                                     Size  Type      Status         Time   Timeline                                  │
│ notifications                                           306 B  json      200          1.70 s                                     ▋       │
│ events                                                   17 B  json      200          1.22 s                                     ▍       │
│ status?orderId=ord_15bce3a5a963c9fd                     146 B  json      200          253 ms                                     ▏       │
│ notifications                                           306 B  json      200          1.32 s                                     🮈▏      │
│ ✎ status?orderId=ord_15bce3a5a963c9fd                   145 B  json      200          313 ms                                     ▕       │
│ events                                                   17 B  json      200          954 ms                                      🮈      │
│ notifications                                           306 B  json      200          1.39 s                                      ▐      │
│ notifications                                           306 B  json      200          1.50 s                                       ▌     │
│ events                                                   17 B  json      200          1.21 s                                       🮈     │
│ notifications                                           306 B  json      200          1.66 s                                       🮇▍    │
│ notifications                                           306 B  json      200          1.39 s                                        ▐    │
│ events                                                   17 B  json      200          1.39 s                                        🮈▏   │
│ notifications                                           306 B  json      200          1.54 s                                         ▌   │
│ events                                                   17 B  json      200          1.46 s                                         🮇▎  │
│ notifications                                           306 B  json      200          1.63 s                                         🮇▎ ▐│
│ sessions                                                290 B  json      200          1.74 s                                          ▋ ▐│
│ notifications                                           306 B  json      200          1.70 s                                          ▐▏▐│
│ products?category=headphones&page=1                    1.0 KB  json      200          272 ms                                          ▕ ▐│
│ events                                                   17 B  json      200          1.47 s                                          🮇▎▐│
│ items                                                                    ···          3.09 s                                           █▐│
│ notifications                                           306 B  json      200          1.31 s                                           ▌▐│
│ notifications                                                            ···          500 ms                                           ▕▐│
│ events                                                                   ···          359 ms                                           ▕ │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 Enter open   / filter   Space pause   m pin   y copy   e export   c collapse   s sort   Tab next panel   ? help            window 2 m 00 s
