host/crates/tui/tests/snapshots/snapshots__header_live.snap
---
source: crates/tui/tests/snapshots.rs
expression: "header(&mut app_at(12.0),\nConnectionStatus::Live(\"Pixel 8 [emulator-5554] · com.example.app (pid 4242)\".into()))"
---
 traffic-police  Pixel 8 [demo]  com.example.deepid_example  pid 4312  ● LIVE  ✎ 1 rule active                         images: half-blocks
