host/crates/tui/tests/snapshots/snapshots__help.snap
---
source: crates/tui/tests/snapshots.rs
expression: "frame(12.0, MEDIUM, \"?\")"
---
 traffic-police  Pixel 8 [demo]  com.example.shop  pid 4312  ● LIVE  ✎ 1 rule active          26 requests · 14 KB in · 18 KB out · 1 failed
╭─ Network · all app traffic ────────────────────────────────────────────────────────────────── ━ Receiving 3.9 KB/s   ━ Sending 2.4 KB/s ─╮
│  12 KB/s                                                                                  ┊                                              │
│                                                                                           ┊           ▃▇▇▅▁                              │
│ 6.0 KB/s                                                                                  ┊         ▁▅█████▆▆▆▆▄▁         ▁▁▁▂▂▄▄▃▂▂▂▃▃▂ │
│                                                                                           ▃▄▅▆▇████▇█████████████▇▆▅▅▅▅▆▇███████████████ │
│        0 ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┊┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ │
│                                                                                           🮂▀🮄🮆██████🮆🮅🮅🮅🮆████🮆🮅🮅🮆███🮆🮅🮄🮆██████████████🮆🮄 │
│ 4.0 KB/s                                                                                  ┊    ▔▔▔▔      ▔🮃🮃▔    ▔🮂▔    ▀████🮆🮂  🮂🮃▀▀🮂   │
│                                                                                           ┊                              ▀██🮄            │
│ 8.0 KB/s                                                                                  ┊                               ▔▔             │
│          ╭ keys ──────────────────────────────────────────────────────────────────────────────────────────────────────────────╮          │
╰──────────│ Move     ↑/k up · ↓/j down · ←/h left · →/l right · g/Home top · G/End/Ctrl+g bottom · PgUp page up                │──────────╯
╭─ Requests│          PgDn page down · Ctrl+u/Ctrl+p ½ page up · Ctrl+d ½ page down · Enter open/decode · Esc back              │──────────╮
│ Name     │          Tab next panel · Shift+Tab previous panel                                                                 │          │
│ events   │ Views    1 connections · 2 threads · 3 rules                                                                       │          │
│ user_1024│ List     c collapse · s sort · S reverse · C columns · / filter · m pin · r new rule · d diff                      │          │
│ notificat│ Detail   n next match · N previous match · p parsed/source · o original · b req/resp body · | jq · < scroll left   │         ▐│
│ products?│          > scroll right · [ fold all · ] unfold all                                                                │         ▐│
│ config   │ Rules    K move up · J move down · a add · Del/Backspace remove · Ctrl+s save · E $EDITOR                          │         ▐│
│ ↪ config.│ Live     Space pause · F freeze · L live · +/= zoom in · - zoom out · 0 reset zoom · v range                       │         ▐│
│ items    │ Graph    T source · t clock                                                                                        │██▋      ▐│
│ metrics  │ Session  y copy · w save body · e export · : commands · ? help · x clear · :q quit                                 │▎        ▐│
│ notificat│ Mouse    click rows and tabs · double-click opens · wheel scrolls (zooms on the graph; Shift+wheel moves in time)  │🮋█▍      ▐│
│ events   │          drag the graph to select a range, the border between boxes to resize                                      │🮉▉       ▐│
│ promo-ban│                                                                                                                    │ ▍       ▐│
│ reviews  │ any key closes                                                                                                     │  🮇▌     ▐│
│ notificat╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯  ▕██▎   ▐│
│ checkout                                                 99 B  json      200          2.33 s                                     ▕███▏  ▐│
│ cancel                                                  305 B  html      500          222 ms                                       ▎    ▐│
│ lookup?fields=country,region,currency                   120 B  json      200          291 ms                                        ▍   ▐│
│ notifications                                           306 B  json      200          1.42 s                                        🮈█▌ ▐│
│ events                                                   17 B  json      200          958 ms                                        🮇█  ▐│
│ status?orderId=ord_15bce3a5a963c9fd                     146 B  json      200          329 ms                                         ▐  ▐│
│ recommendations?productId=p_1042                                         ···          1.90 s                                         🮉██▐│
│ fonts.json                                                               canceled     380 ms                                          ▕▍▐│
│ notifications                                                            ···          500 ms                                           🮉▐│
│ status?orderId=ord_15bce3a5a963c9fd                       0 B  json      200          413 ms                                           🮉 │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 Enter open   / filter   Space pause   m pin   y copy   e export   c collapse   s sort   ? help                  ⚠ studio inspector present
