host/crates/tui/tests/snapshots/snapshots__help_small.snap
---
source: crates/tui/tests/snapshots.rs
expression: "frame(12.0, SMALL, \"?\")"
---
 traffic-police  Pixel 8 [demo]  com.example.deepid_example  pid 4312  ● LIVE  ✎ 1 rule active
╭─ Network · all app traffic ────────────────────────── ━ Receiving 3.4 KB/s   ━ Sending 1.5 KB/s ─╮
│  16 KB/s                                                      ┊                                  │
│                                                               ┊        ┏┓                        │
│                                                               ┊        ┃┃                        │
│ 8.0 KB/s                                                      ┊        ┃┃           ┏┓           │
│   ╭ keys ────────────────────────────────────────────────────────────────────────────────────╮┓  │
│   │ Move     ↑/k up · ↓/j down · ←/h left · →/l right · g/Home top · G/End bottom            │┗━ │
│   │          PgUp page up · PgDn page down · Enter open/decode · Esc back                    │┛  │
│   │          Tab next panel · Shift+Tab previous panel                                       │   │
╰───│ Views    1 connections · 2 threads · 3 rules                                             │───╯
╭─ R│ List     c collapse · s sort · S reverse · C columns · / filter · m pin · d diff         │───╮
│ Na│ Detail   n next match · N previous match · p parsed/source · o original · | jq           │   │
│ mo│          < scroll left · > scroll right · [ fold all · ] unfold all                      │   │
│ ev│ Live     Space pause · F freeze · L live · +/= zoom in · - zoom out · 0 reset zoom       │   │
│ li│          v range                                                                         │   │
│ en│ Graph    T source · t clock                                                              │   │
│ do│ Session  y copy · w save body · e export · : commands · ? help · x clear · q quit        │   │
│ mo│ Mouse    click rows and tabs · double-click opens                                        │   │
│ re│          wheel scrolls (zooms on the graph; Shift+wheel moves in time)                   │  ▐│
│ lo│          drag the graph to select a range, the border between boxes to resize            │▎ ▐│
│ mo│                                                                                          │██▐│
│ st│ any key closes                                                                           │▏ ▐│
│ th╰──────────────────────────────────────────────────────────────────────────────────────────╯▐█▐│
│ events                               17 B json      200          970 ms                       ▐▍▐│
│ status?sessionId=session_15bce…     263 B json      200          174 ms                        ▏▐│
│ fonts.json                                          canceled     380 ms                        ▏▐│
│ monitor                                             ···          500 ms                        ▐ │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
 Enter open   / filter   Space pause   m pin   y copy   ? help           ⚠ studio inspector present
